--- a/Lithp Extension/Resources/_locales/en/messages.json
+++ b/Lithp Extension/Resources/_locales/en/messages.json
@@ -1,10 +1,10 @@
 {
     "extension_name": {
-        "message": "Lithp Extension",
-        "description": "The display name for the extension."
+        "message": "Lithp",
+        "description": "Finally, an exthenthion to help make thenth of the interthnet"
     },
     "extension_description": {
-        "message": "This is Lithp Extension. You should tell us what your extension does here.",
-        "description": "Description of what the extension does."
+        "message": "Thith one'th for uth, the dentally fricative defithient few left behind.",
+        "description": "Thome people jutht don't underthtand how difficult the interthnet ith to read. We're thick and tired of wordth not thpelt like they're thupposed to thound in real life !"
     }
 }
